Enhance message box with more content
Added additional heartfelt messages to the message box.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <div class="message-box">
             <h1>Dear Laxmi,</h1>
             <p>This rose bloomed just for you.</p>
+             <p> Tu Kush Rahe Hamesha Bas Yehhe Dua Hai Dilse<br> Koi Gam Na Mille Tujhe 
+                Bas Itna He Pana Hai Rab Se...
+            </p><br>
+            <p> Hamesha Muskurate Rahna</p>
           
         </div>
 
@@ -61,3 +65,4 @@
 </script>
 </body>
 </html>
+
